--- a/house/pom.xml
+++ b/house/pom.xml
@@ -84,10 +84,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.httpcomponents</groupId> -->
+<!-- 			<artifactId>httpclient</artifactId> -->
+<!-- 		</dependency> -->
 	</dependencies>
 
 	<build>
