--- a/house/src/main/resources/application.properties
+++ b/house/src/main/resources/application.properties
@@ -1,9 +1,26 @@
-server.port=8091
+server.port=8090
 
-spring.datasource.url=jdbc:mysql://localhost:3306/user?characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#Direct datasource
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=bgkp108512
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-
+#For MyBatis
 mybatis.config-location=classpath:/mybatis/mybatis-config.xml
+# For Druid
+spring.druid.driverClassName=com.mysql.jdbc.Driver
+spring.druid.url=jdbc:mysql://127.0.0.1:3306/houses?useUnicode=true&amp;amp;characterEncoding=UTF-8&amp;amp;zeroDateTimeBehavior=convertToNull
+spring.druid.username=root
+spring.druid.password=bgkp108512
+# 最大连接数
+spring.druid.maxActive=30
+# 最小连接数,会一直保持
+spring.druid.minIdle=5
+spring.druid.maxWait=10000
+#Mysql主动断开八小时空闲的连接, 以下语句做 连接是否有效, 不过不正常客户端做剔除.
+spring.druid.validationQuery=SELECT 'x'
+#空闲连接检查时间间隔, 默认是其作用的
+spring.druid.timeBetweenEvictionRunsMillis=60000
+#空闲连接最小空闲时间
+spring.druid.minEvictableIdleTimeMillis=300000
