整合Druid,并用查看其监控平台. Filter是第一节里面的测试,Springboot搭建成功.

--- a/house/pom.xml
+++ b/house/pom.xml
@@ -22,6 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<druid-version>1.1.0</druid-version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -88,6 +89,29 @@
 <!-- 			<groupId>org.apache.httpcomponents</groupId> -->
 <!-- 			<artifactId>httpclient</artifactId> -->
 <!-- 		</dependency> -->
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+           <scope>true</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>${druid-version}</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.google.guava</groupId>
+		  <artifactId>guava</artifactId>
+		  <version>18.0</version>
+		</dependency>
+<!-- 		通过使用spring-boot-configuration-processor jar， 你可以从被@ConfigurationProperties注解的节点轻松的产生自己的配置元数据文件。
+			该jar包含一个在你的项目编译时会被调用的Java注解处理器。想要使用该处理器，你只需简单添加spring-boot-configuration-processor依赖， -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
