--- a/house/src/main/resources/application.properties
+++ b/house/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=8090
 mybatis.config-location=classpath:/mybatis/mybatis-config.xml
 # For Druid
 spring.druid.driverClassName=com.mysql.jdbc.Driver
-spring.druid.url=jdbc:mysql://127.0.0.1:3306/houses?useUnicode=true&amp;amp;characterEncoding=UTF-8&amp;amp;zeroDateTimeBehavior=convertToNull
+spring.druid.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&amp;amp;characterEncoding=UTF-8&amp;amp;zeroDateTimeBehavior=convertToNull
 spring.druid.username=root
 spring.druid.password=bgkp108512
 # 最大连接数
