--- a/house/house-web/src/main/resources/application.properties
+++ b/house/house-web/src/main/resources/application.properties
@@ -10,7 +10,7 @@ mybatis.config-location=classpath:/mybatis/mybatis-config.xml
 
 # For Druid
 spring.druid.driverClassName=com.mysql.jdbc.Driver
-spring.druid.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&amp;amp;characterEncoding=UTF-8&amp;amp;zeroDateTimeBehavior=convertToNull
+spring.druid.url=jdbc:mysql://127.0.0.1:3306/houses?useUnicode=true&amp;amp;characterEncoding=UTF-8&amp;amp;zeroDateTimeBehavior=convertToNull
 spring.druid.username=root
 spring.druid.password=bgkp108512
 # 最大连接数
@@ -39,11 +39,35 @@ spring.freemarker.settings.datetime_format=yyyy-MM-dd HH:mm:ss
 spring.freemarker.settings.default_encoding=UTF-8
 #头文件
 spring.freemarker.settings.auto_import=common/common.ftl as common
+#本地存放的文件路径,可以修改成自己的图片存放路径,对应nginx.conf里alias对应目录(若本地安装了nginx服务器,开启如下配置)
+file.path=/opt/bgkp/imgs
 
+#163发送邮件使用的
+domain.name=127.0.0.1:8090
+spring.mail.host=smtp.163.com
+spring.mail.username=yzpshg1@163.com
+spring.mail.password=bgkp108396
+spring.mail.properties.mail.smtp.auth=true
+#SSL证书Socket工厂  
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory 
+#使用SMTPS协议465端口  
+spring.mail.properties.mail.smtp.port=465
+spring.mail.properties.mail.smtp.socketFactory.port=465
+#没这句不行,现在都得用ssl去发邮件了
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 
-
-
-
+######qq邮箱########
+#spring.mail.host=smtp.qq.com
+#spring.mail.username=754576021@qq.com
+#QQ邮箱授权码
+#spring.mail.password=fuilqyzbelljbcbg
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#log level
+logging.level.com.mooc.house.web=debug
 
 
 
