--- a/house/house-web/pom.xml
+++ b/house/house-web/pom.xml
@@ -46,6 +46,15 @@
            <optional>true</optional>
           <scope>true</scope>
 	</dependency>
+	<dependency>
+       <groupId>org.springframework.boot</groupId>
+       <artifactId>spring-boot-starter-mail</artifactId>
+    </dependency>
+	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
   </dependencies>
   <build>
 	<plugins>
