第5章 单体架构之房产和推荐功能开发（分页组件、Ajax、Redis）

--- a/house/house-web/src/main/resources/application.properties
+++ b/house/house-web/src/main/resources/application.properties
@@ -39,8 +39,11 @@ spring.freemarker.settings.datetime_format=yyyy-MM-dd HH:mm:ss
 spring.freemarker.settings.default_encoding=UTF-8
 #头文件
 spring.freemarker.settings.auto_import=common/common.ftl as common
-#本地存放的文件路径,可以修改成自己的图片存放路径,对应nginx.conf里alias对应目录(若本地安装了nginx服务器,开启如下配置)
-file.path=/opt/bgkp/imgs
+#本地存放的文件路径,可以修改成自己的图片存放路径,对应nginx.conf里alias对应目录(若本地安装了nginx服务器,开启如下配置), windows 和unix路径有差别
+file.path=f:\\opt\\bgkp\\imgs
+#静态资源地址前缀(若本地安装了nginx服务器,开启如下配置)
+#file.prefix=http://127.0.0.1:8081/images
+file.prefix=http://127.0.0.1:8087/imgs
 
 #163发送邮件使用的
 domain.name=127.0.0.1:8090
