--- a/house/house-biz/pom.xml
+++ b/house/house-biz/pom.xml
@@ -41,7 +41,11 @@
 		<artifactId>druid</artifactId>
 		<version>${druid-version}</version>
 	</dependency>
-	
+	<dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
  </dependencies>
  <build>
 	<plugins>
